# my-art-helper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  rxconfig.py
.github/: copilot-instructions.md
art_helper/: __init__.py  art_helper.py  state.py
art_helper/pages/: __init__.py  index.py
tests/: test_main.py
