[project]
name = "my-art-helper"
version = "0.1.0"
description = "A Reflex web application that prompts for an art medium and queries an LLM for materials, tips, and upgrade suggestions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=0.27.0",
    "python-dotenv>=0.21.0",
    "requests>=2.28.0",
    "reflex==0.8.24.post1",
]

[project.scripts]
art-helper = "main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["art_helper"]
